<resources>
    <string name="app_name">BD Question Bank</string>
    <string name="image_view">Image View</string>
    <string name="card_title">Card Title</string>
    <string name="search">Search</string>
    <string name="user_name">User Name</string>
    <string name="institute_name">Institute Name</string>
    <string name="daily_quiz_score">Daily quiz score</string>
    <string name="quiz_score_value">100</string>
    <string name="take_quiz">Take Quiz</string>
    <string name="school_college_questions">School, College questions</string>
    <string name="ssc">SSC</string>
    <string name="hsc">HSC</string>
    <string name="admission">Admission</string>
    <string name="bcs_job_questions">BCS, Job questions</string>
    <string name="bcs">BCS</string>
    <string name="banks">Banks</string>
    <string name="government">Government</string>
    <string name="cse_it">CSE / IT</string>
    <string name="electronics">Electronics</string>
    <string name="reading_materials">Reading Materials</string>
    <string name="bengali_books">বাংলা</string>
    <string name="english_books">ইংরেজি</string>
    <string name="math_books">গাণিতিক বিষয়াবলী</string>
    <string name="bd_study_books">বাংলাদেশ বিষয়বলী</string>
    <string name="english_literature_books">ইংরেজি ভাষা ও সাহিত্য</string>
    <string name="international_affair_books">আন্তর্জাতিক বিষয়াবলী</string>
    <string name="general_knowledge_books">সাধারণ বিজ্ঞান</string>
    <string name="geography_books">ভূগোল পরিবেশ ও দুর্যোগ ব্যবস্থাপনা</string>
    <string name="ethics_books">নৈতিকতা মূল্যবোধ ও সুশাসন</string>
    <string name="mental_ability_books">মানসিক দক্ষতা</string>
    <string name="cse_books">কম্পিউটার ও তথ্য প্রযুক্তি</string>
    <string name="board_books">সকল বোর্ড বই</string>
    <string name="large_books">বড় বই কালেকশন</string>
    <string name="mixed_books">মিক্সড কালেকশন</string>
    <string name="ssc_questions">SSC Questions</string>
    <string name="accounting">Accounting</string>
    <string name="agriculture">Agriculture</string>
    <string name="bangla_1st_paper">Bangla 1st Paper</string>
    <string name="bangla_2nd_paper">Bangla 2nd Paper</string>
    <string name="bangladesh_and_world_view">Bangladesh and World View</string>
    <string name="biology">Biology</string>
    <string name="business_initiative">Business Initiative</string>
    <string name="chemistry">Chemistry</string>
    <string name="economics">Economics</string>
    <string name="english_1st_paper">English 1st Paper</string>
    <string name="english_2nd_paper">English 2nd Paper</string>
    <string name="finance_and_banking">Finance and Banking</string>
    <string name="geography_and_environment">Geography and Environment</string>
    <string name="higher_math">Higher Math</string>
    <string name="general_math">General Math</string>
    <string name="home_science">Home Science</string>
    <string name="islam_and_moral_education">Islam and Moral education</string>
    <string name="ict">ICT</string>
    <string name="hindu_religion">Hindu Religion</string>
    <string name="civics">Civics</string>
    <string name="physics">Physics</string>
    <string name="science">Science</string>
    <string name="user_preferences">User Preferences</string>
    <string name="select_pic">Change</string>
    <string name="app_theme">App Theme</string>
    <string name="save_changes">Save changes</string>
    <string name="light_green">Light Green</string>
    <string name="dark_pink">Dark Pink</string>
    <string name="new_pic_selected">Picture selected</string>
    <string name="saved_changes">Saved changes</string>
    <string name="daily_quiz">Daily quiz</string>
    <string name="test_your_knowledge_by_taking_quiz">Test your knowledge by taking quiz.</string>
    <string name="sets">Sets</string>
    <string name="loading">Loading…</string>
    <string name="done">Done</string>
    <string name="score">Score</string>
    <string name="ssc_acc_all">SSC Accounting All Board</string>
    <string name="ssc_agri_all">SSC Agriculture All Board</string>
    <string name="ssc_b1_all">SSC Bangla 1st Paper All Board</string>
    <string name="ssc_b2_all">SSC Bangla 2nd Paper All Board</string>
    <string name="ssc_bdwrldview_all">SSC Bangladesh and World View All Board</string>
    <string name="ssc_bio_all">SSC Biology All Board</string>
    <string name="ssc_biuini_all">SSC Business Initiative All Board</string>
    <string name="ssc_chem_all">SSC Chemistry All Board</string>
    <string name="ssc_cvics_all">SSC Civics All Board</string>
    <string name="ssc_econ_all">SSC Economics All Board</string>
    <string name="ssc_finan_all">SSC Finance and Banking All Board</string>
    <string name="ssc_geo_all">SSC Geography and Environment All Board</string>
    <string name="ssc_Himath_all">SSC Higher Math All Board</string>
    <string name="ssc_gmath_all">SSC General Math All Board</string>
    <string name="ssc_phy_all">SSC Physics All Board</string>
    <string name="ssc_science_all">SSC Science All Board</string>
    <string name="ssc_ICT_all">SSC ICT All Board</string>
    <string name="ssc_hindu_all">SSC Hindu All Board</string>
    <string name="ssc_Home_all">SSC Home Science All Board</string>
    <string name="ssc_islam_all">SSC Islam and Moral Education All Board</string>
    <string name="ssc_e1_all">SSC English 1st Paper All Board</string>
    <string name="ssc_e2_all">SSC English 2nd Paper All Board</string>
    <string name="agrani_bank">Agrani Bank</string>
    <string name="bangladesh_bank">Bangladesh Bank</string>
    <string name="janata_bank">Janata Bank</string>
    <string name="probashi_kallyan_bank">Probashi Kallyan Bank</string>
    <string name="sonali_bank">Sonali Bank</string>
    <string name="uttara_bank">Uttara Bank</string>
    <string name="combined">Combined</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="rupali_bank">Rupali Bank</string>
    <string name="uni_buet">Bangladesh University of Engineering &amp; Technology</string>
    <string name="uni_butex">Bangladesh University of Textiles</string>
    <string name="uni_chitt">University of Chittagong</string>
    <string name="uni_comilla">Comilla University</string>
    <string name="uni_cuet">Chittagong University of Engineering &amp; Technology</string>
    <string name="uni_dhaka">University of Dhaka</string>
    <string name="uni_jahangir">Jahangirnagar University</string>
    <string name="uni_jagannath">Jagannath University</string>
    <string name="uni_kazi_nazrul">Jatiya Kabi Kazi Nazrul Islam University</string>
    <string name="uni_mediacl">Medical Colleges</string>
    <string name="uni_noakhali">Noakhali Science &amp; Technology University</string>
    <string name="uni_rajshahi">University of Rajshahi</string>
    <string name="uni_ruet">Rajshahi University of Engineering &amp; Technology</string>
    <string name="uni_sust">Shahjalal University of Science &amp; Technology</string>
    <string name="uni_khulna">Khulna University</string>
    <string name="uni_kuet">Khulna University of Engineering &amp; Technology</string>

</resources>
